--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,4 @@ MazeRobot/MDK-ARM/MazeRobot/MazeRobot.hex
 MazeRobot/MDK-ARM/MazeRobot/MazeRobot.htm
 MazeRobot/MDK-ARM/MazeRobot/MazeRobot.map
 MazeRobot/MDK-ARM/MazeRobot/MazeRobot_MazeRobot.dep
+MazeRobot/MDK-ARM/MazeRobot.uvguix.markv
